[package]
name = "generic-tls"
version = "0.1.0"
edition = "2021"
description = "Generic TLS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls-pemfile = "1.0.3"
thiserror = "1.0.48"
tokio = { version = "1.21.2", features = ["fs"] }
tokio-rustls = "0.23.4"
